fix: fixed the section tag may be obscured by a Fixed header
https://css-tricks.com/fixed-headers-on-page-links-and-overlapping-content-oh-my/

--- a/src/Components/stylesheet.css
+++ b/src/Components/stylesheet.css
@@ -1,10 +1,11 @@
 html, 
 body {
     height: 100%;
+    scroll-padding-top: 50px
 }
 
 .Site-content {
-  margin-top: 50px;
+  padding-top: 50px;
   margin-bottom: 100px;
 }
 
